test/rbkt/Queries/zorba/syntax_errors/unexpected_eof.xq
(: 
  Syntax error with an improved error message:
  unexpected eof
:)

#